--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,15 +7,14 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [test]
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v2.3.2
       - name: Install Dependencies
-        run: npm install
+        run: npm install      
       - name: Build
         env:
-          CI: true
+          CI: true        
         run: npm run build
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v2
@@ -24,7 +23,7 @@ jobs:
           path: build
   deploy:
     name: Deploy
-    needs: [test, build]
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -33,30 +32,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build
-          path: dist
+          path: build
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-  test:
-    timeout-minutes: 60
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - name: Install dependencies
-        run: npm ci
-      - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
-      - name: Run Playwright tests
-        run: npx playwright test
-      - uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
