--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,6 +62,7 @@ jobs:
           retention-days: 30
  docker:
     runs-on: ubuntu-latest
+    [test, build]
     steps:
       -
         name: Set up QEMU
