--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,25 +60,21 @@ jobs:
           name: playwright-report
           path: playwright-report/
           retention-days: 30
- docker:
+  docker:
     runs-on: ubuntu-latest
     needs: [test, build]
     steps:
-      -
-        name: Set up QEMU
+      - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-      -
-        name: Login to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
+      - name: Build and push
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: user/app:latest         
+          tags: user/app:latest
