--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -78,5 +78,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
+          context: "{{defaultContext}}:mysubdir"
           push: true
           tags: user/app:latest
