--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           retention-days: 30
   docker:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [test, build]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
