--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
           path: build
   deploy:
     name: Deploy
-    needs: [test, build]
+    # needs: [test, build]
+    needs: [test]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
@@ -62,7 +63,7 @@ jobs:
   #         retention-days: 30
   docker:
     runs-on: ubuntu-latest
-    needs: [deploy]
+    needs: [test]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
