--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: [test, build]
+    needs: [build]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
