--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,5 +75,5 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: actions/checkout@v2
-      - name: Build the Docker image
-        run: docker run -d -p 80:80 docker/getting-started
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v4.0.0
