--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,4 +76,4 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: actions/checkout@v2
       - name: Build and push Docker images
-        uses: docker/build-push-action@v4.0.0
+        run: docker run -d -p 80:80 docker/getting-started
