--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,17 +63,15 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Start container
+        uses: docker/build-push-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: actions/checkout@v2
-      - name: Build and push Docker images
-        run: docker run -d -p 80:80 docker/getting-started
+          context: .
+          push: false
+          tags: getting-started:latest
+          load: true
+          target: getting-started
+      - name: Run container
+        run: docker run -d -p 80:80 getting-started:latest
