--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,23 +65,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+      - name: Build and Push Docker Image
+        uses: mr-smithers-excellent/docker-build-push@v4
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - uses: actions/checkout@v2
-      - name: Start container
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: getting-started:latest
-          load: true
-          target: getting-started
-      - name: Run container
-        run: docker run -d -p 80:80 getting-started:latest
+          image: nanajanashia/demo-app
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+        
